force-app/main/default/objects/LiquidFlowRate__c/LiquidFlowRate__c.object-meta.xml
<CustomObject>
    <label>LiquidFlowRate</label>
    <nameField>
        <label>LiquidFlowRate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LiquidFlowRates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>