force-app/main/default/objects/LiquidFlowRate__c/fields/DensityActualFrom__c.field-meta.xml
<CustomField>
    <fullName>DensityActualFrom__c</fullName>
    <label>DensityActualFrom</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>