force-app/main/default/objects/LiquidFlowRate__c/fields/DensityActualTo__c.field-meta.xml
<CustomField>
    <fullName>DensityActualTo__c</fullName>
    <label>DensityActualTo</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>