force-app/main/default/objects/LiquidFlowRate__c/fields/LiquidFlowRate_UOM_To__c.field-meta.xml
<CustomField>
    <fullName>LiquidFlowRate_UOM_To__c</fullName>
    <label>LiquidFlowRate_UOM_To</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>(Imperial) gallon/h</fullName>
            </value>
            <value>
                <fullName>(Imperial) gallon/min</fullName>
            </value>
            <value>
                <fullName>(U.S.) gallon/h</fullName>
            </value>
            <value>
                <fullName>(U.S.) gallon/min</fullName>
            </value>
            <value>
                <fullName>barrel/h</fullName>
            </value>
            <value>
                <fullName>ft3/h</fullName>
            </value>
            <value>
                <fullName>ft3/min</fullName>
            </value>
            <value>
                <fullName>kg/h</fullName>
            </value>
            <value>
                <fullName>kg/min</fullName>
            </value>
            <value>
                <fullName>L/h</fullName>
            </value>
            <value>
                <fullName>L/min</fullName>
            </value>
            <value>
                <fullName>lb/h</fullName>
            </value>
            <value>
                <fullName>lb/min</fullName>
            </value>
            <value>
                <fullName>m3/h</fullName>
            </value>
            <value>
                <fullName>m3/min</fullName>
            </value>
            <value>
                <fullName>kg/s</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>