force-app/main/default/objects/LiquidFlowRate__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>LiquidFlowRate_UOM_From__c</columns>
    <columns>LiquidFlowRate_UOM_To__c</columns>
    <columns>DensityActualFrom__c</columns>
    <columns>DensityActualTo__c</columns>
    <columns>Multiplier__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>